tests/expectations/compiler/async_blocks/invalid_expr_in_async_block_fail.out
Error [ETYC0372148]: `async` blocks are only allowed inside an `async` transition or a script function.
    --> compiler-test:3:18
     |
   3 |         let f1 = async {
     |                  ^^^^^^^
   4 |             let s = self.signer;
     |             ^^^^^^^^^^^^^^^^^^^^
   5 |             let c = self.caller;
     |             ^^^^^^^^^^^^^^^^^^^^
   6 |         };
     |         ^
     |
     = Try moving this `async` block into an `async` transition or a script function.
Error [ETYC0372147]: Invalid expression in an async block. `self.signer` cannot be used directly here
    --> compiler-test:4:21
     |
   4 |             let s = self.signer;
     |                     ^^^^^^^^^^^
Error [ETYC0372147]: Invalid expression in an async block. `self.caller` cannot be used directly here
    --> compiler-test:5:21
     |
   5 |             let c = self.caller;
     |                     ^^^^^^^^^^^
